Lists and spacing fixed

--- a/vimus.css
+++ b/vimus.css
@@ -1,7 +1,6 @@
 MainPane {
     /*layout: horizontal;*/
     background: $boost;
-    margin: 1;
     /*min-width: 50;*/
     /*padding: 1;*/
 }
@@ -21,20 +20,17 @@ Text {
 PrevPane {
     content-align: center middle;
     text-opacity: 60%;
-    margin: 2;
     width: 25%;
 }
 
 CurPane {
     content-align: center middle;
     text-opacity: 60%;
-    margin: 2;
 }
 
 RightPane {
     content-align: center middle;
     text-opacity: 60%;
-    margin: 2;
     width: 25%;
 }
 
